feat: add core infrastructure (#14, #15, #19)
#19 Application Entity:
- Application entity with optimistic locking (@Version)
- ApplicationStatus enum (UNHANDLED, ACCEPTED, REJECTED)
- ApplicationRepository with filtering methods

#15 Global Exception Handler:
- @ControllerAdvice for centralized error handling
- Handles OptimisticLockException for concurrent modifications
- User-friendly error.html template (never exposes stack traces)

#14 Dashboard Routing:
- Role-based routing from / to appropriate dashboard
- ApplicantController with /applicant/dashboard
- RecruiterController with /recruiter/dashboard and status filtering
- Updated SecurityConfig with role-based authorization

Also:
- Fix Dockerfile for Windows CRLF line endings
- Add i18n messages for dashboards and errors

Closes #14, Closes #15, Closes #19

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -54,3 +54,27 @@ home.title=Recruitment System
 home.welcome=Welcome, {0}!
 home.role=Role
 home.logout=Logout
+
+# Error Page
+error.title=Error
+error.home=Go Home
+error.back=Go Back
+
+# Applicant Dashboard
+applicant.dashboard.title=Applicant Dashboard
+applicant.dashboard.heading=My Application
+applicant.dashboard.status=Application Status
+applicant.dashboard.apply=Submit Application
+applicant.dashboard.no.application=You haven't submitted an application yet.
+
+# Recruiter Dashboard
+recruiter.dashboard.title=Recruiter Dashboard
+recruiter.dashboard.heading=Applications
+recruiter.dashboard.filter=Filter by Status
+recruiter.dashboard.all=All
+recruiter.dashboard.name=Applicant Name
+recruiter.dashboard.status=Status
+recruiter.dashboard.date=Submitted
+recruiter.dashboard.actions=Actions
+recruiter.dashboard.view=View
+recruiter.dashboard.no.applications=No applications found.
