--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -70,15 +70,41 @@ applicant.dashboard.no.application=You haven't submitted an application yet.
 # Applicant Apply Page
 applicant.apply.title=Submit Application
 applicant.apply.heading=Submit Application
-applicant.apply.instructions=By submitting an application, you express your interest in working with us. Your information will be reviewed by our recruiters.
+applicant.apply.instructions=Fill in your competences and availability periods. This information will be reviewed by our recruiters.
 applicant.apply.your.info=Your Information
 applicant.apply.name=Name
 applicant.apply.email=Email
 applicant.apply.pnr=Personal Number
 applicant.apply.submit=Submit Application
 applicant.apply.back=Back to Dashboard
+applicant.apply.cancel=Cancel
 applicant.apply.success=Your application has been submitted successfully!
+applicant.apply.competences=Competences
+applicant.apply.competences.help=Add your relevant competences and years of experience.
+applicant.apply.competence=Competence
+applicant.apply.select.competence=Select competence...
+applicant.apply.years=Years of Experience
+applicant.apply.add.competence=+ Add Competence
+applicant.apply.availability=Availability
+applicant.apply.availability.help=Specify the time periods when you are available to work.
+applicant.apply.from.date=From Date
+applicant.apply.to.date=To Date
+applicant.apply.add.availability=+ Add Availability Period
+applicant.apply.remove=Remove
 application.already.exists=You have already submitted an application.
+
+# Applicant Status Page
+applicant.status.title=Application Status
+applicant.status.heading=Application Status
+applicant.status.current=Current Status
+applicant.status.submitted=Submitted:
+applicant.status.competences=Your Competences
+applicant.status.competence.name=Competence
+applicant.status.competence.years=Years of Experience
+applicant.status.availability=Your Availability
+applicant.status.from.date=From
+applicant.status.to.date=To
+applicant.status.back=Back to Dashboard
 
 # Recruiter Dashboard
 recruiter.dashboard.title=Recruiter Dashboard
@@ -106,3 +132,18 @@ recruiter.application.save=Save
 recruiter.application.back=Back to Dashboard
 recruiter.application.success=Application status updated successfully.
 recruiter.application.conflict=Another recruiter has modified this application. Please refresh and try again.
+recruiter.application.competences=Competences
+recruiter.application.competence.name=Competence
+recruiter.application.competence.years=Years of Experience
+recruiter.application.availability=Availability
+recruiter.application.from.date=From
+recruiter.application.to.date=To
+recruiter.application.no.competences=No competences listed.
+recruiter.application.no.availability=No availability periods listed.
+
+# Validation Messages for Application
+validation.competence.required=Please select a competence
+validation.years.required=Years of experience is required
+validation.years.positive=Years of experience must be positive
+validation.fromDate.required=From date is required
+validation.toDate.required=To date is required
