feat: complete application flow (#4, #20, #21, #22)
- Add ApplicationService with @Transactional for application lifecycle
- Add /applicant/apply endpoint for submitting applications
- Add /recruiter/application/{id} for viewing and updating status
- Add @Transactional to AuthService
- Add i18n messages for new templates
- Handle optimistic locking conflicts in recruiter status updates

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -67,6 +67,19 @@ applicant.dashboard.status=Application Status
 applicant.dashboard.apply=Submit Application
 applicant.dashboard.no.application=You haven't submitted an application yet.
 
+# Applicant Apply Page
+applicant.apply.title=Submit Application
+applicant.apply.heading=Submit Application
+applicant.apply.instructions=By submitting an application, you express your interest in working with us. Your information will be reviewed by our recruiters.
+applicant.apply.your.info=Your Information
+applicant.apply.name=Name
+applicant.apply.email=Email
+applicant.apply.pnr=Personal Number
+applicant.apply.submit=Submit Application
+applicant.apply.back=Back to Dashboard
+applicant.apply.success=Your application has been submitted successfully!
+application.already.exists=You have already submitted an application.
+
 # Recruiter Dashboard
 recruiter.dashboard.title=Recruiter Dashboard
 recruiter.dashboard.heading=Applications
@@ -78,3 +91,18 @@ recruiter.dashboard.date=Submitted
 recruiter.dashboard.actions=Actions
 recruiter.dashboard.view=View
 recruiter.dashboard.no.applications=No applications found.
+
+# Recruiter Application Detail
+recruiter.application.title=Application Details
+recruiter.application.heading=Application Details
+recruiter.application.applicant=Applicant
+recruiter.application.email=Email
+recruiter.application.pnr=Personal Number
+recruiter.application.status=Status
+recruiter.application.submitted=Submitted
+recruiter.application.updated=Last Updated
+recruiter.application.update.status=Update Status
+recruiter.application.save=Save
+recruiter.application.back=Back to Dashboard
+recruiter.application.success=Application status updated successfully.
+recruiter.application.conflict=Another recruiter has modified this application. Please refresh and try again.
