--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -117,6 +117,12 @@ recruiter.dashboard.date=Submitted
 recruiter.dashboard.actions=Actions
 recruiter.dashboard.view=View
 recruiter.dashboard.no.applications=No applications found.
+recruiter.dashboard.previous=Previous
+recruiter.dashboard.next=Next
+recruiter.dashboard.page=Page
+recruiter.dashboard.of=of
+recruiter.dashboard.showing=Showing
+recruiter.dashboard.applications=applications
 
 # Recruiter Application Detail
 recruiter.application.title=Application Details
