503 db down error. and other minor issues

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ login.username=Username
 login.password=Password
 login.submit=Sign In
 login.error=Invalid username or password
+login.dbError=Service temporarily unavailable. Please try again later
 login.logout=You have been logged out
 login.register.link=Register here
 login.no.account=Don't have an account?
@@ -51,7 +52,8 @@ error.registration.failed=Registration failed. Please try again.
 
 # Home Page
 home.title=Recruitment System
-home.welcome=Welcome, {0}!
+home.heading=Recruitment System
+home.welcome=Welcome
 home.role=Role
 home.logout=Logout
 
