username taken error and mail taken error.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -46,8 +46,8 @@ validation.pnr.format=Personal number must be in format YYYYMMDD-XXXX
 validation.email.format=Please enter a valid email address
 
 # Error Messages
-error.username.taken=Username already exists
-error.email.taken=Email already registered
+error.username.taken=Username is already taken. Please choose another.
+error.email.taken=Email is already registered. Please use a different email or login.
 error.registration.failed=Registration failed. Please try again.
 
 # Home Page
